Modify line code html lang

--- a/fr/Film/top-gun:maverick.html
+++ b/fr/Film/top-gun:maverick.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <html>
 
 <head>
-    <title>Top GUn: Maverick - DevHTML-IR</title>  
+    <title>Top Gun: Maverick - DevHTML-IR</title>  
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="title">Top GUn: Maverick</h1>
+        <h1 class="title">Top Gun: Maverick</h1>
     </header>
     <nav>
         <ul>
