Update Page Movies French - MàJ Page Film Français

--- a/fr/Film/fast&furious8.html
+++ b/fr/Film/fast&furious8.html
@@ -23,7 +23,12 @@
             <li><a href="../../fr/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h2 class="soon">Soon</h2>
+    <h2>Synopsis</h2>
+    <p>Des rivages de Cuba aux rues de New York en passant par les plaines gelées de la mer arctique de Barrents,
+        l'équipe va sillonner le globe pour tenter d'empêcher une anarchiste de déchaîner un chaos mondial 
+        et de ramener à la maison l'homme qui a fait d'eux une famille..</p>
+        <button><a href="https://mega.nz/file/0I0mgLwR#Qt5smOU16QtWduRT1DM3htjf2tP5O6-tw_9ghCrve8o">Voir le film</a></button>
+
 </body>
 <footer>
     <div class="lang-select">
