--- a/fr/Film/geostorm.html
+++ b/fr/Film/geostorm.html
@@ -23,7 +23,13 @@
             <li><a href="../../fr/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h2 class="soon">Soon</h2>
+    <h2>Synopsis</h2>
+    <p>Après que des catastrophes naturelles ont menacé la Terre, 
+        des scientifiques ont créé des satellites qui peuvent contrôler le climat. 
+        Le jour où ces satellites ne fonctionnent plus, un designer doit travailler main 
+        dans la main avec son frère pour sauver le monde d'une terrible tempête.</p>
+        <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Voir le film</a></button>
+
 </body>
 <footer>
     <div class="lang-select">
