--- a/fr/film.html
+++ b/fr/film.html
@@ -21,17 +21,18 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <h2>Film disponible prochainement sur le site:</h2>
-<p>⊛ Fast & Furious 8</p>
-<p>⊛ Fast & Furious 9</p>  
-<p>⊛ Shazam! (2019)</p>  
-<p>⊛ Taxi 5</p>  
-<p>⊛ Geostorm</p>  
+  <h2>Film disponible prochainement sur le site:</h2>  
 <p>⊛ Top Gun: Maverick</p>  
 <p>⊛ Titanic</p>
-<p>⊛ Alibi.com </p>
 <h2>Disponible</h2>
 <a class="p" href="Film/a-fond.html">A Fond</a></body>
+<a class="p" href="Film/alibi.com.html">Alibi.com</a></body>
+<a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a></body>
+<a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a></body>
+<a class="p" href="Film/geostorm.html">Geostorm</a></body>
+<a class="p" href="Film/shazam.html">Shazam !</a></body>
+<a class="p" href="Film/taxi-5.html">Taxi 5</a></body>
+
 <footer>
   <div class="lang-select">
     <select onchange="location = this.value;">
