--- a/fr/film.html
+++ b/fr/film.html
@@ -24,9 +24,10 @@
   <h2>Film disponible prochainement sur le site:</h2>  
 <p>⊛ Top Gun: Maverick</p>  
 <p>⊛ Titanic</p>
+<p>⊛ Alibi.com</p>
+
 <h2>Disponible</h2>
 <a class="p" href="Film/a-fond.html">A Fond</a></body>
-<a class="p" href="Film/alibi.com.html">Alibi.com</a></body>
 <a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a></body>
 <a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a></body>
 <a class="p" href="Film/geostorm.html">Geostorm</a></body>
