--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     if (!isChrome && !isSafari) {
       // Message d'avertissement
       var warningMessage = 'Ce site est optimisé pour Google Chrome et Safari. \ Veuillez télécharger Google Chrome pour une expérience optimale.';
-      
+
       // Affichage de la fenêtre d'avertissement
       if (confirm(warningMessage)) {
-        // Redirection vers le lien spécifique (par exemple, la page de téléchargement de Google Chrome)
+        // Redirection vers le lien spécifique suite à l'acceptation
         window.location.href = 'https://www.google.com/chrome/';
+      }
+      else {
+        // Redirection vers le spécifique suite au refus
+        window.location.href = 'about:blank'
       }
     }
   </script>
