Again Again Again X) Modify Script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       // Message de remerciement
       var thankYouMessage = 'Merci d\'utiliser Google Chrome pour visiter le site :)';
       alert(thankYouMessage);
+    }
+    if (isSafari) {
+      // Message de remerciment
+      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site'
     } else {
       // Message d'avertissement pour les autres navigateurs
       var warningMessage = 'Ce site est optimisé pour Google Chrome. Veuillez télécharger Google Chrome pour une expérience optimale.';
