--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     }
     if (isSafari) {
       // Message de remerciment
-      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site'
-    } else {
+      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site';
+      alert(thankYouMessage);
+        }
+     else {
       // Message d'avertissement pour les autres navigateurs
       var warningMessage = 'Ce site est optimisé pour Google Chrome. Veuillez télécharger Google Chrome pour une expérience optimale.';
       
