--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
   <script>
     // Détection du navigateur
     var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+    var isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
 
     // Vérification si le navigateur est Google Chrome
     if (isChrome) {
       // Message de remerciement
       var thankYouMessage = 'Merci d\'utiliser Google Chrome pour visiter le site :)';
       alert(thankYouMessage);
-    }
-    if (isSafari) {
-      // Message de remerciment
-      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site';
+    } else if (isSafari) {
+      // Message de remerciement pour Safari
+      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site.';
       alert(thankYouMessage);
-        }
-     else {
+    } else {
       // Message d'avertissement pour les autres navigateurs
       var warningMessage = 'Ce site est optimisé pour Google Chrome. Veuillez télécharger Google Chrome pour une expérience optimale.';
-      
+
       // Affichage de la fenêtre d'avertissement
       if (confirm(warningMessage)) {
         // Redirection vers le lien spécifique (par exemple, la page de téléchargement de Google Chrome)
@@ -31,7 +30,8 @@
         window.location.href = 'about:blank';
       }
     }
-  </script>
+</script>
+
   <link rel="icon" href="images/logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="styles.css">
