--- a/index.html
+++ b/index.html
@@ -4,33 +4,81 @@
 <head>
   <title>Langue - DevHTML-IR</title>
   <script>
+    // Fonction pour stocker le choix de l'utilisateur dans un cookie
+    function setCookie(name, value, days) {
+      var expires = "";
+      if (days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        expires = "; expires=" + date.toUTCString();
+      }
+      document.cookie = name + "=" + (value || "") + expires + "; path=/";
+    }
+  
+    // Fonction pour obtenir la valeur d'un cookie
+    function getCookie(name) {
+      var nameEQ = name + "=";
+      var ca = document.cookie.split(';');
+      for (var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) === ' ') c = c.substring(1, c.length);
+        if (c.indexOf(nameEQ) === 0) return c.substring(nameEQ.length, c.length);
+      }
+      return null;
+    }
+  
     // Détection du navigateur
     var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
     var isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
-
+  
     // Vérification si le navigateur est Google Chrome
     if (isChrome) {
-      // Message de remerciement
-      var thankYouMessage = 'Merci d\'utiliser Google Chrome pour visiter le site :)';
-      alert(thankYouMessage);
+      // Vérification si l'utilisateur a déjà accepté les messages de remerciement
+      var isAccepted = getCookie("messagesAccepted");
+  
+      if (!isAccepted) {
+        // Message de remerciement
+        var thankYouMessage = 'Merci d\'utiliser Google Chrome pour visiter le site :)';
+        alert(thankYouMessage);
+  
+        // Stockage de l'acceptation dans un cookie pendant 24 heures
+        setCookie("messagesAccepted", true, 1);
+      }
     } else if (isSafari) {
-      // Message de remerciement pour Safari
-      var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site.';
-      alert(thankYouMessage);
+      // Vérification si l'utilisateur a déjà accepté les messages de remerciement
+      var isAccepted = getCookie("messagesAccepted");
+  
+      if (!isAccepted) {
+        // Message de remerciement pour Safari
+        var thankYouMessage = 'Merci d\'utiliser Safari pour visiter le site.';
+        alert(thankYouMessage);
+  
+        // Stockage de l'acceptation dans un cookie pendant 24 heures
+        setCookie("messagesAccepted", true, 1);
+      }
     } else {
-      // Message d'avertissement pour les autres navigateurs
-      var warningMessage = 'Ce site est optimisé pour Google Chrome. Veuillez télécharger Google Chrome pour une expérience optimale.';
-
-      // Affichage de la fenêtre d'avertissement
-      if (confirm(warningMessage)) {
-        // Redirection vers le lien spécifique (par exemple, la page de téléchargement de Google Chrome)
-        window.location.href = 'https://www.google.com/chrome/';
-      } else {
-        // Redirection vers une page blanche
-        window.location.href = 'about:blank';
+      // Vérification si l'utilisateur a déjà refusé les messages de remerciement
+      var isRejected = getCookie("messagesRejected");
+  
+      if (!isRejected) {
+        // Message d'avertissement pour les autres navigateurs
+        var warningMessage = 'Ce site est optimisé pour Google Chrome ou Safari. Je vous conseille de télécharger Google Chrome ou Safari pour une expérience optimale.';
+  
+        // Affichage de la fenêtre d'avertissement
+        if (confirm(warningMessage)) {
+          // Redirection vers le lien spécifique (par exemple, la page de téléchargement de Google Chrome)
+          window.location.href = 'https://www.google.com/chrome/';
+        } else {
+          // Redirection vers une page blanche
+          window.location.href = 'about:blank';
+  
+          // Stockage du refus dans un cookie pendant 24 heures
+          setCookie("messagesRejected", true, 1);
+        }
       }
     }
-</script>
+  </script>
+  
 
   <link rel="icon" href="images/logo.png" type="image/x-icon">
 
@@ -48,6 +96,18 @@
       <option value="en/index.html">English</option>
     </select>
   </div>
+  <div id="cookieBanner" class="cookie-banner">
+    <div class="cookie-content">
+      <p>Ce site utilise des cookies. Acceptez-vous l'utilisation des cookies ?</p>
+      <div class="cookie-buttons">
+        <button id="acceptButton" class="cookie-button">Accepter</button>
+        <button id="refuseButton" class="cookie-button">Refuser</button>
+      </div>
+    </div>
+  </div>
+  
+  <script src="cookie.js"></script>
+  
   <div class="copyright">
     © DevHTML-IR - 2023
 </footer>
