Add Page Login (currently not working)

--- a/en/index.html
+++ b/en/index.html
@@ -21,6 +21,7 @@
             <li><a href="movies.html">Movies</a></li>
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="private.html">Private Section</a></li>
         </ul>
     </nav>
     <h2>Services Offered</h2>
