--- a/fr/private.html
+++ b/fr/private.html
@@ -27,13 +27,13 @@
         <input type="password" name="password" required="">
         <label>Mot de passe</label>
       </div>
-      <button type="submit">
+      <a href="#">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
         Se connecter
-      </button>
+      </a>     
     </form>
   </div>
 </body>
