--- a/fr/private.html
+++ b/fr/private.html
@@ -27,13 +27,13 @@
         <input type="password" name="password" required="">
         <label>Mot de passe</label>
       </div>
-      <a href="#">
+      <button type="submit">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
         Se connecter
-      </a>     
+      </button>
     </form>
   </div>
 </body>
