--- a/fr/index.html
+++ b/fr/index.html
@@ -39,8 +39,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="index.html">English</option>
-            <option value="../fr/index.html">Français</option>
+            <option value="index.html">Français</option>
+            <option value="../en/index.html">English</option>
         </select>
     </div>
     <div class="copyright">
