Modifcation Code private.html

--- a/en/private.html
+++ b/en/private.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="../styles.css" rel="stylesheet">
+  <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
   <div class="login-box">
@@ -24,7 +24,7 @@
         <span></span>
         <span></span>
         <span></span>
-        Connect
+        Submit
       </a>
     </form>
   </div>
