--- a/fr/private.html
+++ b/fr/private.html
@@ -17,23 +17,23 @@
 </head>
 <body>
   <div class="login-box">
-    <h2>Connexion</h2>
-    <form action="private.php" method="post">
+    <h2>Login</h2>
+    <form>
       <div class="user-box">
-        <input type="text" name="username" required="">
-        <label>Nom d'utilisateur</label>
+        <input type="text" name="" required="">
+        <label>Username</label>
       </div>
       <div class="user-box">
-        <input type="password" name="password" required="">
-        <label>Mot de passe</label>
+        <input type="password" name="" required="">
+        <label>Password</label>
       </div>
-      <button type="submit">
+      <a href="#">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        Se connecter
-      </button>
+        Submit
+      </a>
     </form>
   </div>
 </body>
