--- a/en/private.html
+++ b/en/private.html
@@ -8,6 +8,7 @@
   <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
+  <li><a href="index.html">Go back to the original site</a></li>
   <div class="login-box">
     <h2>Login</h2>
     <form>
