--- a/fr/private.html
+++ b/fr/private.html
@@ -17,22 +17,22 @@
 </head>
 <body>
   <div class="login-box">
-    <h2>Login</h2>
+    <h2>Connexion</h2>
     <form>
       <div class="user-box">
         <input type="text" name="" required="">
-        <label>Username</label>
+        <label>Nom d'utilisateur</label>
       </div>
       <div class="user-box">
         <input type="password" name="" required="">
-        <label>Password</label>
+        <label>Mot de passe</label>
       </div>
       <a href="#">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        Submit
+        Valider
       </a>
     </form>
   </div>
