--- a/fr/index.html
+++ b/fr/index.html
@@ -18,8 +18,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Acceuil</a></li>
-            <li><a href="movies.html">Film</a></li>
-            <li><a href="tv-series.html">Série TV</a></li>
+            <li><a href="film.html">Film</a></li>
+            <li><a href="serie.html">Série TV</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="private.html">Section Privé</a></li>
         </ul>
@@ -47,6 +47,4 @@
         © DevHTML-IR - 2023
     </div>
 </footer>
-
-
 </html>
