Optimisation du Code

--- a/en/movies.html
+++ b/en/movies.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class="f-en">Movies</h1>
+        <h1>Movies</h1>
     </header>
     <nav>
         <ul>
@@ -19,6 +19,7 @@
             <li><a href="movies.html">Movies</a></li>
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
     <h2>Movies available soon on the site:</h2>
@@ -34,8 +35,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="index.html">English</option>
-            <option value="../fr/index.html">Français</option>
+            <option value="movies.html">English</option>
+            <option value="../fr/film.html">Français</option>
         </select>
     </div>
     <div class="copyright">
