--- a/fr/Film/top-gun:maverick.html
+++ b/fr/Film/top-gun:maverick.html
@@ -21,6 +21,7 @@
             <li><a href="../../fr/film.html">Film</a></li>
             <li><a href="../../fr/serie.html">Série</a></li>
             <li><a href="../../fr/contact.html">Contact</a></li>
+            <li><a href="../private.html">Section Privé</a></li>
         </ul>
     </nav>
     <h2 class="soon">Soon</h2>
@@ -28,8 +29,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../index.html">Français</option>
-            <option value="../../en/index.html">English</option>
+            <option value="../top-gun:maverick.html">Français</option>
+            <option value="../../en/top-gun:maverick.html">English</option>
         </select>
     </div>
     <div class="copyright">
