--- a/fr/contact.html
+++ b/fr/contact.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1 class="contact">Contact</h1>
+    <h1>Contact</h1>
   </header>
   <nav>
     <ul>
@@ -19,14 +19,15 @@
       <li><a href="film.html">Film</a></li>
       <li><a href="serie.html">Série</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="private.html">Section Privé</a></li>
     </ul>
   </nav>
   <button><a href="mailto:film.website0@gmail.com">Mail</a></button>
   <footer>
     <div class="lang-select">
       <select onchange="location = this.value;">
-        <option value="index.html">Français</option>
-        <option value="../en/index.html">English</option>
+        <option value="contact.html">Français</option>
+        <option value="../en/contact.html">English</option>
       </select>
       </select>
     </div>
