--- a/fr/film.html
+++ b/fr/film.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1 class="f">Film</h1>
+    <h1>Film</h1>
   </header>
   <nav>
     <ul>
@@ -19,6 +19,7 @@
       <li><a href="film.html">Film</a></li>
       <li><a href="serie.html">Série</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="private.html">Section Privé</a></li>
     </ul>
   </nav>
   <h2>Film disponible prochainement sur le site:</h2>  
@@ -37,8 +38,8 @@
 <footer>
   <div class="lang-select">
     <select onchange="location = this.value;">
-      <option value="index.html">Français</option>
-      <option value="../en/index.html">English</option>
+      <option value="film.html">Français</option>
+      <option value="../en/movies.html">English</option>
     </select>
     </select>
   </div>
