--- a/fr/private.html
+++ b/fr/private.html
@@ -37,4 +37,15 @@
     </form>
   </div>
 </body>
+<footer>
+  <div class="lang-select">
+      <select onchange="location = this.value;">
+          <option value="private.html">Français</option>
+          <option value="../en/private.html">English</option>
+      </select>
+  </div>
+  <div class="copyright">
+      © DevHTML-IR - 2023
+  </div>
+</footer>
 </html>
