--- a/fr/serie.html
+++ b/fr/serie.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1 class="s">Série</h1>
+    <h1>Série</h1>
   </header>
   <nav>
     <ul>
@@ -19,6 +19,7 @@
       <li><a href="film.html">Film</a></li>
       <li><a href="serie.html">Série</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="private.html">Section Privé</a></li>
     </ul>
   </nav>
   <p class="soon">Bientôt</p>
@@ -27,8 +28,8 @@
 <footer>
   <div class="lang-select">
     <select onchange="location = this.value;">
-      <option value="index.html">Français</option>
-      <option value="../en/index.html">English</option>
+      <option value="serie.html">Français</option>
+      <option value="../en/tv-series.html">English</option>
     </select>
     </select>
   </div>
