--- a/en/contact.html
+++ b/en/contact.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class="contact">Contact</h1>
+        <h1>Contact</h1>
     </header>
     <nav>
         <ul>
@@ -19,14 +19,15 @@
             <li><a href="movies.html">Movies</a></li>
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
     <button><a href="mailto:film.website0@gmail.com">Mail</a></button>
     <footer>
         <div class="lang-select">
             <select onchange="location = this.value;">
-                <option value="index.html">English</option>
-                <option value="../fr/index.html">Français</option>
+                <option value="contact.html">English</option>
+                <option value="../fr/contact.html">Français</option>
             </select>
         </div>
         <div class="copyright">
