--- a/en/private.html
+++ b/en/private.html
@@ -1,14 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Private Section</title>
-  <!-- Required meta tags -->
+  <link rel="icon" href="../images/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Go back to the original site</a></li>
+    </ul>
+  </nav>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="../styles.css" rel="stylesheet">
 </head>
 <body>
-  <li><a href="index.html">Go back to the original site</a></li>
   <div class="login-box">
     <h2>Login</h2>
     <form>
@@ -25,9 +32,20 @@
         <span></span>
         <span></span>
         <span></span>
-        Submit
+        Valide
       </a>
     </form>
   </div>
 </body>
+<footer>
+  <div class="lang-select">
+      <select onchange="location = this.value;">
+          <option value="private.html">English</option>
+          <option value="../fr/private.html">Français</option>
+      </select>
+  </div>
+  <div class="copyright">
+      © DevHTML-IR - 2023
+  </div>
+</footer>
 </html>
