--- a/en/tv-series.html
+++ b/en/tv-series.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class="s-en">TV Series</h1>
+        <h1>TV Series</h1>
     </header>
     <nav>
         <ul>
@@ -19,6 +19,7 @@
             <li><a href="movies.html">Movies</a></li>
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
     <p class="soon">Soon</p>
@@ -27,8 +28,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="index.html">English</option>
-            <option value="../fr/index.html">Français</option>
+            <option value="tv-series.html">English</option>
+            <option value="../fr/serie.html">Français</option>
         </select>
     </div>
     <div class="copyright">
