--- a/fr/Film/geostorm.html
+++ b/fr/Film/geostorm.html
@@ -21,6 +21,7 @@
             <li><a href="../../fr/film.html">Film</a></li>
             <li><a href="../../fr/serie.html">Série</a></li>
             <li><a href="../../fr/contact.html">Contact</a></li>
+            <li><a href="../private.html">Section Privé</a></li>
         </ul>
     </nav>
     <h2>Synopsis</h2>
@@ -34,8 +35,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../index.html">Français</option>
-            <option value="../../en/index.html">English</option>
+            <option value="../geostorm.html">Français</option>
+            <option value="../../en/geostorm.html">English</option>
         </select>
     </div>
     <div class="copyright">
