--- a/fr/index.html
+++ b/fr/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="title">Bienvenue</h1>
+        <h1>Bienvenue</h1>
     </header>
     <nav>
         <ul>
