Correcting Code ''Lang-Select''

--- a/fr/Film/a-fond.html
+++ b/fr/Film/a-fond.html
@@ -37,8 +37,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../a-fond.html">Français</option>
-            <option value="../../en/a-fond.html">English</option>
+            <option value="/a-fond.html">Français</option>
+            <option value="../../en/movies/a-fond.html">English</option>
         </select>
     </div>
     <div class="copyright">
