--- a/fr/Film/fast&furious8.html
+++ b/fr/Film/fast&furious8.html
@@ -34,8 +34,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../fast&furious8.html">Français</option>
-            <option value="../../en/fast&furious8.html">English</option>
+            <option value="fast&furious8.html">Français</option>
+            <option value="../../en/movies/fast&furious8.html">English</option>
         </select>
     </div>
     <div class="copyright">
