--- a/fr/Film/fast&furious9.html
+++ b/fr/Film/fast&furious9.html
@@ -36,8 +36,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../fast&furious9.html">Français</option>
-            <option value="../../en/fast&furious9.html">English</option>
+            <option value="fast&furious9.html">Français</option>
+            <option value="../../en/movies/fast&furious9.html">English</option>
         </select>
     </div>
     <div class="copyright">
