--- a/fr/Film/geostorm.html
+++ b/fr/Film/geostorm.html
@@ -35,8 +35,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../geostorm.html">Français</option>
-            <option value="../../en/geostorm.html">English</option>
+            <option value="geostorm.html">Français</option>
+            <option value="../../en/movies/geostorm.html">English</option>
         </select>
     </div>
     <div class="copyright">
