--- a/fr/Film/shazam.html
+++ b/fr/Film/shazam.html
@@ -38,8 +38,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../shazam.html">Français</option>
-            <option value="../../en/shazam.html">English</option>
+            <option value="shazam.html">Français</option>
+            <option value="../../en/movies/shazam.html">English</option>
         </select>
     </div>
     <div class="copyright">
