--- a/fr/Film/taxi-5.html
+++ b/fr/Film/taxi-5.html
@@ -37,8 +37,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../taxi-5.html">Français</option>
-            <option value="../../en/taxi-5.html">English</option>
+            <option value="taxi-5.html">Français</option>
+            <option value="../../en/movies/taxi-5.html">English</option>
         </select>
     </div>
     <div class="copyright">
