--- a/fr/Film/titanic.html
+++ b/fr/Film/titanic.html
@@ -29,8 +29,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../titanic.html">Français</option>
-            <option value="../../en/titanic.html">English</option>
+            <option value="titanic.html">Français</option>
+            <option value="../../en/movies/titanic.html">English</option>
         </select>
     </div>
     <div class="copyright">
