--- a/fr/Film/top-gun:maverick.html
+++ b/fr/Film/top-gun:maverick.html
@@ -29,8 +29,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../top-gun:maverick.html">Français</option>
-            <option value="../../en/top-gun:maverick.html">English</option>
+            <option value="top-gun:maverick.html">Français</option>
+            <option value="../../en/movies/top-gun:maverick.html">English</option>
         </select>
     </div>
     <div class="copyright">
