--- a/fr/Film/alibi.com.html
+++ b/fr/Film/alibi.com.html
@@ -30,8 +30,8 @@
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="../alibi.com.html">Français</option>
-            <option value="../../en/alibi.com.html">English</option>
+            <option value="alibi.com.html">Français</option>
+            <option value="../../en//movies/alibi.com.html">English</option>
         </select>
     </div>
     <div class="copyright">
