Add English Page

--- a/fr/index.html
+++ b/fr/index.html
@@ -33,8 +33,8 @@
     <h2>Séries télévisées</h2>
     <p>Sur la page des séries TV, vous trouverez des séries Netflix à regarder sans dépenser d'argent et sans risque de
         virus ! Les séries sont stockées dans MEGA Cloud.</p>
-    <h2>Contacter</h2>
-    <p>En cas de problème, contactez-nous par e-mail.</p>
+    <h2>Contact</h2>
+    <p>En cas de problème, contactez-moi par e-mail.</p>
 </body>
 <footer>
     <div class="lang-select">
