--- a/en/Movies/geostorm.html
+++ b/en/Movies/geostorm.html
@@ -1,1 +1,43 @@
-t
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Geostorm - DevHTML-IR</title>
+    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles.css">
+    <script src="../../condition.js"></script>
+</head>
+
+<body>
+    <header>
+        <h1 class="title">Geostorm</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="../../en/index.html">Home</a></li>
+            <li><a href="../../en/movie.html">Movie</a></li>
+            <li><a href="../../en/series.html">Series</a></li>
+            <li><a href="../../en/contact.html">Contact</a></li>
+            <li><a href="../private.html">Private Section</a></li>
+        </ul>
+    </nav>
+    <h2>Synopsis</h2>
+    <p>After natural disasters threaten the Earth, 
+        scientists create satellites that can control the climate. 
+        When these satellites malfunction, a designer must work hand in hand 
+        with his brother to save the world from a devastating storm.</p>
+    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Watch the movie</a></button>
+</body>
+<footer>
+    <div class="lang-select">
+        <select onchange="location = this.value;">
+            <option value="geostorm.html">English</option>
+            <option value="../../fr/Film/geostorm.html">Français</option>
+        </select>
+    </div>
+    <div class="copyright">
+        © DevHTML-IR - 2023
+    </div>
+</footer>
+
+</html>
