Change of the first h2

--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
             <li><a href="private.html">Private Section</a></li>
         </ul>
     </nav>
-    <h2>Services Offered</h2>
+    <h2>Synopsis</h2>
     <p>On this website, you will find movies, TV series, and TV show reruns. The services of the website may evolve or
         offer new services based on user demand.</p>
     <h2>Movies</h2>
