--- a/fr/index.html
+++ b/fr/index.html
@@ -24,7 +24,7 @@
             <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
-    <h2>Services offerts</h2>
+    <h2>Synopsis</h2>
     <p>Sur ce site Web, vous trouverez des films, des séries télévisées et des rediffusions d'émissions télévisées. Les services du site peuvent évoluer ou
         proposer de nouveaux services en fonction de la demande des utilisateurs.</p>
     <h2>Films</h2>
