--- a/fr/contact.html
+++ b/fr/contact.html
@@ -15,13 +15,14 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="film.html">Film</a></li>
-      <li><a href="serie.html">Série</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="private.html">Section Privé</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="tv-series.html">TV Series</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
+        <li><a href="private.html">Section Privé</a></li>
     </ul>
-  </nav>
+</nav>
   <button><a href="mailto:film.website0@gmail.com">Mail</a></button>
   <footer>
     <div class="lang-select">
