--- a/fr/star-ac-2023.html
+++ b/fr/star-ac-2023.html
@@ -14,14 +14,14 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Acceuil</a></li>
-            <li><a href="film.html">Film</a></li>
-            <li><a href="serie.html">Série TV</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="movies.html">Movies</a></li>
+            <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
             <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
-
     <h2>Évolution de la côte de favoritisme des académiciens</h2>
     <p>Retrouvez ci-dessous l'évolution de la côte de favoritisme des académiciens</p>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=487342310&resourcekey" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
