--- a/en/Movies/geostorm.html
+++ b/en/Movies/geostorm.html
@@ -19,6 +19,7 @@
             <li><a href="../../en/series.html">Series</a></li>
             <li><a href="../../en/contact.html">Contact</a></li>
             <li><a href="../private.html">Private Section</a></li>
+            <li><a href="../star-ac-2023.html">Star Academy 2023</a></li>
         </ul>
     </nav>
     <h2>Synopsis</h2>
