--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,8 @@
             <li><a href="movies.html">Movies</a></li>
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="private.html">Private Section</a></li>
+            <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
+            <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
     <h2>Synopsis</h2>
