--- a/fr/Film/top-gun:maverick.html
+++ b/fr/Film/top-gun:maverick.html
@@ -22,6 +22,7 @@
             <li><a href="../../fr/serie.html">Série</a></li>
             <li><a href="../../fr/contact.html">Contact</a></li>
             <li><a href="../private.html">Section Privé</a></li>
+            <li><a href="../star-ac-2023.html">Star Academy 2023</a></li>
         </ul>
     </nav>
     <h2 class="soon">Soon</h2>
