--- a/fr/index.html
+++ b/fr/index.html
@@ -17,10 +17,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Acceuil</a></li>
-            <li><a href="film.html">Film</a></li>
-            <li><a href="serie.html">Série TV</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="movies.html">Movies</a></li>
+            <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
             <li><a href="private.html">Section Privé</a></li>
         </ul>
     </nav>
