--- a/fr/star-ac-2023.html
+++ b/fr/star-ac-2023.html
@@ -24,7 +24,9 @@
     </nav>
     <h2>Évolution de la côte de favoritisme des académiciens</h2>
     <p>Retrouvez ci-dessous l'évolution de la côte de favoritisme des académiciens</p>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=487342310&resourcekey" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=487342310&resourcekey"
+        width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 
     <footer>
         <div class="lang-select">
