--- a/en/star-ac-2023.html
+++ b/en/star-ac-2023.html
@@ -27,6 +27,22 @@
     <iframe
         src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=4873423 10&resourcekey"
         width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <h2>Survey of student wishes when nominees are announced</h2>
+    <p>Find below the results of the surveys of the wishes of the student eliminated during the next bonus (except for
+        bonus 4).</p>
+    <p>The votes come from the social network
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=2124013759&format=interactive
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive        
+width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
     <footer>
         <div class="lang-select">
             <select onchange="location = this.value;">
