--- a/fr/star-ac-2023.html
+++ b/fr/star-ac-2023.html
@@ -14,9 +14,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="tv-series.html">TV Series</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="movies.html">Film</a></li>
+            <li><a href="tv-series.html">Série</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
             <li><a href="private.html">Section Privé</a></li>
@@ -27,8 +27,28 @@
     <iframe
         src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=487342310&resourcekey"
         width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
-
-    <footer>
+<h2>Sondage des souhaits de l'élève élève lors de l'annonce des nomminés</h2>
+<p>Retrouvez ci-dessous les résultats des sondages des souhaits de l'élève éliminé lors du prochain prime (sauf pour le prime 4).</p>
+<p>Les votes proviennent du réseau social X</p>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=2124013759&format=interactive
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<iframe
+src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive        
+width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+<footer>
         <div class="lang-select">
             <select onchange="location = this.value;">
                 <option value="star-ac-2023.html">Français</option>
