--- a/fr/contact.html
+++ b/fr/contact.html
@@ -15,9 +15,9 @@
   </header>
   <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="movies.html">Movies</a></li>
-        <li><a href="tv-series.html">TV Series</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="movies.html">Film</a></li>
+        <li><a href="tv-series.html">Série</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
         <li><a href="private.html">Section Privé</a></li>
